# mipidsi

./: Cargo.toml
examples/parallel_ili9341_rp_pico/src/: main.rs
src/: batch.rs  builder.rs  dcs.rs  graphics.rs  interface.rs  lib.rs  models.rs  options.rs  raw_framebuf.rs
src/interface/: parallel.rs  spi.rs
src/models/: gc9107.rs  gc9a01.rs  ili9225.rs  ili9341.rs  ili9342c.rs  ili934x.rs  ili9486.rs  ili9488.rs  ili948x.rs  rm67162.rs  st7735s.rs  st7789.rs  st7796.rs
tests/: external.rs
