[package]
name = "mipidsi"
description = "MIPI Display Command Set compatible generic driver"
version = "0.9.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/almindor/mipidsi"
keywords = ["embedded-hal-driver", "mipi", "dcs", "display", "async"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"
rust-version = "1.75"

[dependencies]
embedded-graphics = "0.8"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
